Add alarm comment